@startuml

title __BOARDOBJECTS's Class Diagram__\n

  package BoardObjects {
    class Boost {
        - counter : int
        - spawnRate : int
        + Boost()
        + incCounter()
        + resetCounter()
        + timeToSpawn()
    }
  }
  

  package BoardObjects {
    class BoostManager {
        ~ rnd : Random
        ~ applesSpawned : int
        + BoostManager()
        + spawn()
        + spawnRandom()
    }
  }
  

  package BoardObjects {
    class Bullet {
        - speed : int
        - dirX : int
        - dirY : int
        - projection : boolean
        + Bullet()
        + update()
        + getProjection()
        + endProjection()
        + getSpeed()
        + getWorm()
    }
  }
  

  package BoardObjects {
    class DynamicObject {
        ~ speed : int
        ~ counter : int
        ~ type : char
        + DynamicObject()
        + getCounter()
        + setCounter()
        + getSpeed()
        + update()
    }
  }
  

  package BoardObjects {
    class GameObject {
        - type : char
        + GameObject()
        + getPosition()
        + getType()
    }
  }
  

  package BoardObjects {
    class Ghost {
        - directionCounter : int
        - changeDirection : int
        - counter : int
        - rnd : Random
        - dead : boolean
        + Ghost()
        + update()
        + isDead()
        + setDead()
    }
  }
  

  package BoardObjects {
    class Player {
        - lives : int
        - name : String
        + host : boolean
        + addr : InetAddress
        + port : int
        + Player()
        + updateDirection()
        + getWorm()
        + getWormCounter()
        + resetWormCounter()
        + incWormCounter()
        + getWormSpeed()
        + isHost()
        + getAddr()
        + getPort()
        + getWormLives()
        + setInetAddr()
        + getName()
        + getPlayerPanel()
    }
  }
  

  package BoardObjects {
    class Worm {
        - speed : int
        - length : int
        - lives : int
        - score : int
        - body : List<Position>
        - bullets : List<Bullet>
        - wormNumber : int
        - counter : int
        - type : char
        - isFast : int
        - gun : boolean
        - fireAllowed : boolean
        + Worm()
        + update()
        + resetCounter()
        + incWormCounter()
        + updater()
        + getHeadPos()
        + getTailPos()
        + updateBody()
        + grow()
        + loseLife()
        + isAlive()
        + reset()
        + generateRandomPos()
        + validPos()
        + addToSpeed()
        + lightningMode()
        + resetSpeed()
        + cut()
        + isInBody()
        + updateHeadPos()
        + hasGun()
        + pickUpGun()
        + fireGun()
        + removeBullet()
        + getDirection()
        + getNextDirection()
        + getLives()
        + getSpeed()
        + getCounter()
        + getScore()
        + getBullets()
        + setScore()
        + toggleFireAllowed()
    }
  }
  

  Boost -up-|> GameObject
  Bullet -up-|> DynamicObject
  Bullet o-- Position : position
  Bullet o-- Worm : w
  DynamicObject -up-|> GameObject
  DynamicObject o-- Direction : direction
  GameObject o-- Position : position
  Ghost -up-|> DynamicObject
  Ghost o-- Position : position
  Ghost o-- Direction : direction
  Player o-- Worm : worm
  Player o-- PlayerPanel : playerPanel
  Worm -up-|> GameObject
  Worm o-- Position : headPos
  Worm o-- Position : tailPos
  Worm o-- Position : startPos
  Worm o-- Position : position
  Worm o-- Direction : direction
  Worm o-- Direction : nextDirection


right footer


PlantUML diagram generated by SketchIt! (https://bitbucket.org/pmesmeur/sketch.it)
For more information about this tool, please contact philippe.mesmeur@gmail.com
endfooter

@enduml
